<?xml version="1.0"?>
<package format="3">
  <name>system_monitor</name>
  <version>0.1.0</version>
  <description>System monitoring tools for ROS</description>
  <license>GNU Lesser General Public License (LGPL)</license>

  <author>Ralf Kaestner</author>
  <author>Jerome Maye</author>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>
  <url>http://github.com/ethz-asl/ros-system-monitor</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>sysstat</exec_depend>
  <exec_depend>hddtemp</exec_depend>
  <exec_depend>ntpdate</exec_depend>
  <exec_depend>ifstat</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
